# arm-ble-gui

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/debug-log/: INDEX.md
docs/devlog/: 2026-06-12_项目初始化.md
scripts/: check-toolchain.ps1  dev-shell.ps1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/ble/: BleConnection.cpp  BleConnection.h  BleDeviceInfo.h  BleScanner.cpp  BleScanner.h  CMakeLists.txt  NusService.cpp  NusService.h
src/ui/: CMakeLists.txt  DeviceScanPanel.cpp  DeviceScanPanel.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  PresetPanel.cpp  PresetPanel.h  SendPanel.cpp  SendPanel.h  StyleConstants.h
tests/: CMakeLists.txt
tests/ble/: CMakeLists.txt  tst_nus_protocol.cpp
